--- a/venator-app/src/components/filter-input.css
+++ b/venator-app/src/components/filter-input.css
@@ -1,5 +1,7 @@
 .filter-input-container {
-    font-family: monospace;
+    font-family: 'Noto Sans Mono', monospace;
+    font-size: 12px;
+    font-weight: 500;
     background-color: var(--bg-highlight-color);
     border: 1px solid var(--border-dark-color);
     padding: 2px 4px;
@@ -22,7 +24,7 @@
     border: 1px solid var(--border-dark-color);
     border-radius: 3px;
     margin: 2px 0px;
-    padding: 2px 4px;
+    padding: 0px 4px 1px 4px;
 }
 
 .predicate:hover {
@@ -40,7 +42,7 @@
 .spacer {
     white-space: pre-wrap;
     display: inline-block;
-    max-width: 3.2px;
+    max-width: 4.4px;
 }
 
 .filter-input:focus .spacer {
